--- a/juan/bib/ref.bib
+++ b/juan/bib/ref.bib
@@ -13,3 +13,18 @@
   year = {2015},
   note = {Talk. Accessed: 2024-05-20}
 }
+
+@article{peron2019onset,
+  title = {Onset of synchronization of Kuramoto oscillators in scale-free networks},
+  author = {Peron, Thomas and Messias F. de Resende, Bruno and Mata, Ang\'elica S. and Rodrigues, Francisco A. and Moreno, Yamir},
+  journal = {Phys. Rev. E},
+  volume = {100},
+  issue = {4},
+  pages = {042302},
+  numpages = {8},
+  year = {2019},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevE.100.042302},
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.100.042302}
+}
