--- a/juan/bib/ref.bib
+++ b/juan/bib/ref.bib
@@ -28,3 +28,24 @@
   doi = {10.1103/PhysRevE.100.042302},
   url = {https://link.aps.org/doi/10.1103/PhysRevE.100.042302}
 }
+
+﻿@article{zhang2014explosive,
+    author={Zhang, Xiyun
+    and Zou, Yong
+    and Boccaletti, S.
+    and Liu, Zonghua},
+    title={Explosive synchronization as a process of explosive percolation in dynamical phase space},
+    journal={Scientific Reports},
+    year={2014},
+    month={Jun},
+    day={06},
+    volume={4},
+    number={1},
+    pages={5200},
+    abstract={Explosive synchronization and explosive percolation are currently two independent phenomena occurring in complex networks, where the former takes place in dynamical phase space while the latter in configuration space. It has been revealed that the mechanism of EP can be explained by the Achlioptas process, where the formation of a giant component is controlled by a suppressive rule. We here introduce an equivalent suppressive rule for ES. Before the critical point of ES, the suppressive rule induces the presence of multiple, small sized, synchronized clusters, while inducing the abrupt formation of a giant cluster of synchronized oscillators at the critical coupling strength. We also show how the explosive character of ES degrades into a second-order phase transition when the suppressive rule is broken. These results suggest that our suppressive rule can be considered as a dynamical counterpart of the Achlioptas process, indicating that ES and EP can be unified into a same framework.},
+    issn={2045-2322},
+    doi={10.1038/srep05200},
+    url={https://doi.org/10.1038/srep05200}
+}
+
+
