--- a/juan/bib/ref.bib
+++ b/juan/bib/ref.bib
@@ -48,4 +48,13 @@
     url={https://doi.org/10.1038/srep05200}
 }
 
-
+@article{kim2010structural,
+  title={Structural properties of the synchronized cluster on complex networks},
+  author={Kim, Yup and Ko, Yongjin and Yook, Soon-Hyung},
+  journal={Physical Review E},
+  volume={81},
+  number={1},
+  pages={011139},
+  year={2010},
+  publisher={APS}
+}
