--- a/juan/bib/ref.bib
+++ b/juan/bib/ref.bib
@@ -58,3 +58,18 @@
   year={2010},
   publisher={APS}
 }
+
+@article{hong2007entrainment,
+  title = {Entrainment Transition in Populations of Random Frequency Oscillators},
+  author = {Hong, Hyunsuk and Chat\'e, Hugues and Park, Hyunggyu and Tang, Lei-Han},
+  journal = {Phys. Rev. Lett.},
+  volume = {99},
+  issue = {18},
+  pages = {184101},
+  numpages = {4},
+  year = {2007},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.99.184101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.99.184101}
+}
